fixed margins and spacing

--- a/midterm/css/Main.css
+++ b/midterm/css/Main.css
@@ -54,6 +54,7 @@ table {
 
 /*-------- Defaults for text and background details-------------------- */
 html{
+    display: inline-block;
     background-color: #aad4cf;
     font-family: Calibri,Sans Serrif;
     width: 1024px;
@@ -66,8 +67,9 @@ h1{
     margin-top: 15%;
 }
 #main{
+    display: inline-block;
     background-color: #d4e9e7;
-    height: 95%;
+    height: 100%;
 }
 h2{
     font-size: 2em;
@@ -77,7 +79,8 @@ h2{
 /* Main sub menus */
 h3{
     font-size: 1.5em;
-    margin: 5% 8px auto;
+    margin-top: 20px;
+    margin-bottom: 10px;
     clear: left;
 }
 /* Starfish contact sub menu */
@@ -134,17 +137,23 @@ header{
     background-size: 1200px;
     background-position: center;   
 }
-/* ---------------- Contact specific Css --------------------------*/
+/* List info */
 ul{
     list-style: disc;
     margin-left: 20px;
 }
+.length{
+    line-height:15px;
+}
+/* ---------------- Contact specific Css --------------------------*/
 #contact-info{
     border-style: solid;
-    padding: 5px 10px;
+    padding:10px 10px;
     border-width: thin;
     line-height: 1.5rem;
+    margin: 10px;
 }
+/* styling the button w borders and lines */
 #lined{
     border: solid;
     background-color:#d4e9e7;
@@ -154,9 +163,7 @@ ul{
 #lined:hover{
     background-color: black;
 }
-.length{
-    line-height:15px;
-}
+
 #name,#email,#message{
 
     display:block;
@@ -165,6 +172,8 @@ ul{
 #lined{
     display: block;
 }
+/* Footer and copyright info */
 footer{
-margin: 6px 0px auto;
+    text-align: right;
+    margin: 20px;
 }
